# stopisha

./: .coveragerc  .flake8  .gitignore  Makefile  README.md  codecov.yml  pylintrc  pyproject.toml
docs/source/: conf.py  index.rst
prod/: deploy.sh
scripts/devops/: publish.sh
scripts/quality/: clean.sh  format.sh  lint.sh
scripts/tests/: done.sh  integration-test.sh  test.sh
stopisha/chirper/: clean_tweets.py  stream_geolocation.py  stream_listener.py  user_tweets.py
stopisha/core/: config.py
stopisha/utilities/: custom_logger.py
