[tool.poetry]
name = "eirene"
version = "0.0.0"
description = "Cross-Lingual Model for Hate Speech Detection on Twitter: A Case of Swahili and Swahili-English Slang"
authors = ["Andrew Kariuki <andrew.o.kariuki@gmail.com>"]
readme = "README.md"

[tool.black]
line-length = 88

[tool.isort]
profile= "hug"
src_paths=["eirene","test"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.mypy]
python_version = 3.9
strict = true
follow_imports = "silent"
plugins = ["pydantic.mypy","sqlmypy"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
disallow_untyped_defs = true
allow_incomplete_defs = true
allow_untyped_calls = true

[tool.semantic_release]
version_variable = "pyproject.toml:version"
version_source="tag"
commit_subject="chore(release): release eirene {version}"
branch = "main"
upload_to_release = true
patch_without_tag = false

[tool.bandit]
exclude_dirs = ["tests"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^6.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
